--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.4",
     "rollup": "^4.9.6",
+    "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
