--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "typescript": "^5.3.3"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dedent": "^1.5.1"
+  }
 }
